--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,6 @@ dmypy.json
 # Deeper Tensorflow model:
 **_tf_d_nmp.h5
 **_tf_d.h5
+**_tf_d_mish.h5
+**_tf_d_swish.h5
+**_tf_d_Mish_not_loading.h5
