Saving best model on epoch using ModelCheckpoint callback.

--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,11 @@ dmypy.json
 # Deeper Tensorflow model:
 **_tf_d_nmp.h5
 **_tf_d.h5
+**_tf_d*.h5
 **_tf_d_mish.h5
 **_tf_d_swish.h5
+**_tf_d_relu.h5
 **_tf_d_swish_1a.h5
 **_tf_d_Mish_not_loading.h5
+**checkpoints/
+**_tf_d_*
